; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/ypldap/extr_yp.c_ypproc_domain_nonack_2_svc.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/ypldap/extr_yp.c_ypproc_domain_nonack_2_svc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.svc_req = type { i32 }

@ypproc_domain_nonack_2_svc.res = internal global i64 0, align 8
@env = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64* @ypproc_domain_nonack_2_svc(i32* %0, %struct.svc_req* %1) #0 {
  %3 = alloca i64*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.svc_req*, align 8
  store i32* %0, i32** %4, align 8
  store %struct.svc_req* %1, %struct.svc_req** %5, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** @env, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i64 @strcmp(i32 %7, i32 %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %2
  store i64* null, i64** %3, align 8
  br label %15

14:                                               ; preds = %2
  store i64 1, i64* @ypproc_domain_nonack_2_svc.res, align 8
  store i64* @ypproc_domain_nonack_2_svc.res, i64** %3, align 8
  br label %15

15:                                               ; preds = %14, %13
  %16 = load i64*, i64** %3, align 8
  ret i64* %16
}

declare dso_local i64 @strcmp(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
